tests/resources/errors/errors17.ac
import std;
import std.Error;

#aborts
struct TestError :: *Error {
    const char* get_name() const {
        return "TestError";
    }
    const char* get_message() const {
        return "error raised!";
    }
}

void foo() raises TestError {
    raise TestError{};
}

void main() {
    void$()(raises TestError) f = foo;
    try f();
}